<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_note"
        android:title = "@string/add_note"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/action_search_note"
        android:title="@string/search_note"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/action_sorted_notes"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sorted_notes"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/action_about"
        android:title = "@string/menu_about"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never">
    </item>



</menu>